; ModuleID = '/home/carl/AnghaBench/lab/engine/code/botlib/extr_be_aas_reach.c_AAS_MaxJumpDistance.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/botlib/extr_be_aas_reach.c_AAS_MaxJumpDistance.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { float, float, double }

@aassettings = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float @AAS_MaxJumpDistance(float %0) #0 {
  %2 = alloca float, align 4
  %3 = alloca float, align 4
  %4 = alloca float, align 4
  %5 = alloca float, align 4
  store float %0, float* %2, align 4
  %6 = load float, float* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @aassettings, i32 0, i32 0), align 8
  store float %6, float* %3, align 4
  %7 = load float, float* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @aassettings, i32 0, i32 1), align 4
  store float %7, float* %4, align 4
  %8 = load double, double* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @aassettings, i32 0, i32 2), align 8
  %9 = load float, float* %3, align 4
  %10 = fpext float %9 to double
  %11 = fmul double 5.000000e-01, %10
  %12 = fdiv double %8, %11
  %13 = call float @sqrt(double %12)
  store float %13, float* %5, align 4
  %14 = load float, float* %4, align 4
  %15 = load float, float* %5, align 4
  %16 = load float, float* %2, align 4
  %17 = load float, float* %3, align 4
  %18 = fdiv float %16, %17
  %19 = fadd float %15, %18
  %20 = fmul float %14, %19
  ret float %20
}

declare dso_local float @sqrt(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
